--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
   <script src="/assets/js/index.js"></script>
+  <script src="/assets/js/db.js"></script>
 
   <!-- checks to see if service worker was installed. If not, registers the service worker. -->
   <script>
